rootskel (0.62) UNRELEASED; urgency=low

  * Matt Kraai
    - Remove the first devfs mount in init.bootfloppy.

 -- Matt Kraai <kraai@debian.org>  Mon, 09 Feb 2004 16:34:29 -0800

rootskel (0.61) unstable; urgency=low

  * Bastian Blank
    - Always chroot the apt-get call, avoids problems with reduced or
      missmatching libc.
  * Joey Hess
    - Remove dummy ldconfig as the associated bugs are fixed.

 -- Joey Hess <joeyh@debian.org>  Thu,  5 Feb 2004 16:49:21 -0500

rootskel (0.60) unstable; urgency=low

  * Change the kernel for i386 to 2.4.24.

 -- Joey Hess <joeyh@debian.org>  Thu, 29 Jan 2004 16:25:19 -0500

rootskel (0.59) unstable; urgency=low

  * Richard Hirst
    - Change ia64 default kernel to 2.4.22-itanium-smp
  * Bastian Blank
    - Always fail on error.
    - Fix file list in src/etc/rcS.d.

 -- Bastian Blank <waldi@debian.org>  Sun, 25 Jan 2004 19:13:18 +0100

rootskel (0.58) unstable; urgency=low

  * Karsten Merker
    - fix TERM_TYPE detection for serial console on systems
      which boot on serial console with "console=ttyS*"
  * Matt Kraai
    - Create /var/run.
  * Joey Hess
    - Remove the last vestiges of /linuxrc support, including S05init-pid.
    - Remove apt-update, only base-installer used it, and it no longer does.
    - Misc minor changes to apt-install.
  * Stephen R. Marenka
    - Modified /sbin/init and /etc/init.d/rcS to support kernel 2.2.x.

 -- Joey Hess <joeyh@debian.org>  Thu, 22 Jan 2004 19:38:43 -0500

rootskel (0.57) unstable; urgency=low

  * Joey Hess 
    - Add myself to uploaders.
  * Thiemo Seufer
    - Fix src/sbin/init for machines without initrd.

 -- Joey Hess <joeyh@debian.org>  Mon, 15 Dec 2003 13:00:03 -0500

rootskel (0.56) unstable; urgency=low

  * Patch from Jeremie Koenig to make the inits use tmpfs if it is present,
    while falling back to shmfs for those arches still using 2.2 kernel.
    The patch also tells tmpfs to use a max size of 100 mb, which is a better