@@ -2,8 +2,10 @@ rootskel (0.62) UNRELEASED; urgency=low
 
   * Matt Kraai
     - Remove the first devfs mount in init.bootfloppy.
+  * Joey Hess
+    - Update to debhelper v4, use udeb support, simplfy templates creation.
 
- -- Matt Kraai <kraai@debian.org>  Mon, 09 Feb 2004 16:34:29 -0800
+ -- Joey Hess <joeyh@debian.org>  Tue, 10 Feb 2004 14:17:34 -0500
 
 rootskel (0.61) unstable; urgency=low
 
